--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@prisma/client": "^5.14.0",
     "apollo": "^2.34.0",
     "apollo-server": "^3.13.0",
-    "graphql": "^16.8.1"
+    "graphql": "^14.7.0",
+    "graphql-upload": "^8.1.0"
   },
   "devDependencies": {
     "prisma": "^5.14.0"
