--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@prisma/client": "^5.14.0",
     "apollo": "^2.34.0",
     "apollo-server": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
+    "express": "^4.19.2",
     "graphql": "^14.7.0",
-    "graphql-upload": "^8.1.0"
+    "graphql-upload": "^13.0.0"
   },
   "devDependencies": {
     "prisma": "^5.14.0"
